fixed icon alignment

--- a/src/modules/dashboard/components/Dialogs/EditExpenditureDialog/NewValue/NewValue.css
+++ b/src/modules/dashboard/components/Dialogs/EditExpenditureDialog/NewValue/NewValue.css
@@ -1,9 +1,15 @@
 .row {
+  display: flex;
+  align-items: center;
   padding: 8px 0;
   font-size: var(--size-normal);
   font-weight: var(--weight-normal);
   line-height: 18px;
   color: var(--dark);
+}
+
+.row > span {
+  margin-right: 4px;
 }
 
 .smallerPadding {
